--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^9.8.6",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "concurrently": "^8.2.0",
@@ -14,11 +15,12 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
-    "uuid": "^9.0.0",
+    "react-scripts": "^5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "allowedHosts": "all",
