--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "bcrypt": "^5.1.0",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
+    "cron": "^3.1.1",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
+    "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
