--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jwt-decode": "^3.1.0",
     "autoprefixer": "^9.8.6",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "buffer": "^6.0.3",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "cron": "^3.1.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "node-cron": "^3.0.2",
@@ -23,6 +29,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
